--- a/SemaAndCo/Properties/Resources.resx
+++ b/SemaAndCo/Properties/Resources.resx
@@ -163,4 +163,7 @@
   <data name="icons8-logout-40ы1" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\icons8-logout-40ы1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Руководство_пользователя" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\resources\руководство пользователя.pdf;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
 </root>
